cambios en login y qr

--- a/compra.html
+++ b/compra.html
@@ -26,8 +26,8 @@
        </div>
        </div>
        <br><br><br><br><br>
-    <form action="http://localhost/codigo_qr/registro.php/">
-        <h2>Datos para la Compra</h2>
+       <form action="http://localhost/codigo_qr/registro.php" method="POST">
+        <h2>Datos para la compra</h2>
         <input type="text" placeholder="&#128697; Nombre(s)" name="nombre">
         <input type="text" placeholder="&#128697; Apellidos" name="apellido">
         <input type="number" placeholder="&#128697; Cedula de Identidad" name="ci">
@@ -36,11 +36,7 @@
         <input type="password"placeholder="&#128273;Contrase&ntilde;a" name="pass">
         <input type="password"placeholder="&#128273;Repetir Contrase&ntilde;a" name="rpass">
         <input type="submit" name="submit" value="Registrarse">
-      <center>
-        <a href="tribunas.html">
-            <img src="imagenes/comprar.png" width="250">     
-        </a>
-      </center>
+
     </form>
   </body>
 </html>
