--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -29,10 +29,10 @@
      <br><br><br><br>
        <form action="login.php" method="post">
            <h2>Iniciar Sesion</h2>
-            <input type="text" name="email" placeholder="Ingrese su Email">
+            <input type="text" name="email" placeholder="Ingrese su Nombre de Usuario">
 
             <input type="password" name="password" placeholder="Ingrese su contrase&ntilde;a">
-            <input type="submit" value="Iniciar">
+            <input type="submit" value="Iniciar"><input type="submit" value="Registrarse">
         </form>    
     </body>
     </html>
